# counter

./: CHANGELOG.md  LICENSE  Main.hs  README.md  conf.yaml  counter.cabal  shell.nix
.github/workflows/: haskell-ci.yml
app/: Main.hs
lib-counter/Counter/: API.hs  Main.hs  Model.hs  Server.hs
lib-counter/Data/: Result.hs
lib-diagnostic-context/: DiagnosticContext.hs
lib-handler-context/: HandlerContext.hs
lib-servant-server-extra/Servant/Server/: Extra.hs
lib/Counter/: API.hs  Main.hs  Model.hs  Runner.hs  Server.hs
lib/Data/: Result.hs
lib/Dep/: Clock.hs  Conf.hs  Handler.hs  Injects.hs  Knob.hs  Logger.hs  Phases.hs  ReaderAdvice.hs  Repository.hs  Server.hs
lib/Dep/Clock/: Real.hs
lib/Dep/Has/: Call.hs
lib/Dep/Knob/: API.hs  IORef.hs  Server.hs
lib/Dep/Logger/: HandlerAware.hs
lib/Dep/Repository/: Memory.hs
lib/Servant/Server/: Handler.hs  HandlerContext.hs  ToHandler.hs
