cabal-version:      3.4
name:               counter
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Daniel Díaz
maintainer:         diaz_carrete@yahoo.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
    build-depends:    base ^>=4.15.1.0,
    default-language: Haskell2010

executable counter
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    counter:lib-counter

library lib-counter
    import:           warnings
    exposed-modules:  Counter.API
                      Counter.Main
    hs-source-dirs:   lib-counter 
    build-depends:    containers                         >= 0.6.4 && < 0.7,
                      mtl                                >= 2.2.2 && < 2.3,
                      servant                            >= 0.19 && < 0.20,
                      servant-server                     >= 0.19.1 && < 0.20,
                      warp                               >= 3.3.21 && < 3.4,
                      uuid                               >= 1.3.15 && < 1.4,
                      text                               >= 1.2.5 && < 1.3,
                      bytestring                         >= 0.10.12 && < 0.11,
                      counter:lib-servant-server-extra

library lib-servant-server-extra
    import:           warnings
    exposed-modules:  Servant.Server.Extra
    hs-source-dirs:   lib-servant-server-extra
    build-depends:    servant                            >= 0.19 && < 0.20,
                      servant-server                     >= 0.19.1 && < 0.20,
                      containers                         >= 0.6.4 && < 0.7,
                      mtl                                >= 2.2.2 && < 2.3,

library lib-dc
    import:           warnings
    exposed-modules:  DiagnosticContext
    hs-source-dirs:   lib-diagnostic-context
    build-depends:    containers                         >= 0.6.4 && < 0.7,
                      mtl                                >= 2.2.2 && < 2.3,
                      transformers