cabal-version:      3.4
name:               counter
version:            0.1.1.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Daniel Díaz
maintainer:         diaz_carrete@yahoo.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
    build-depends:    base >= 4.16.0.0,
    default-language: Haskell2010

executable counter
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    counter:lib-counter

library lib-counter
    import:           warnings
    exposed-modules:  Counter.Main
                      Counter.API
                      Counter.Server
                      Counter.Runner
                      Counter.Model
                      Data.Result
                      Servant.Server.ToHandler
                      Servant.Server.HandlerContext
                      Dep.Logger
                      Dep.Logger.HandlerAware
                      Dep.Repository
                      Dep.Repository.Memory
                      Dep.Has.Call
    hs-source-dirs:   lib
    build-depends:    
        aeson                              >= 2.0.3 && < 2.1,
        base                               >= 4.16.3 && < 4.17,
        containers                         >= 0.6.5 && < 0.7,
        bytestring                         >= 0.11.3 && < 0.12,
        mtl                                >= 2.2.2 && < 2.3,
        transformers                       >= 0.5.6 && < 0.6,
        text                               >= 1.2.5 && < 1.3,
        dep-t                              >= 0.6.2 && < 0.7,
        dep-t-advice                       >= 0.6.2 && < 0.7,
        lens                               >= 5.2 && < 5.3,
        servant                            >= 0.19 && < 0.20,
        servant-server                     >= 0.19.1 && < 0.20,
        warp                               >= 3.3.21 && < 3.4,
        uuid                               >= 1.3.15 && < 1.4,
