cabal-version:      3.4
name:               counter
version:            0.1.1.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Daniel Díaz
maintainer:         diaz_carrete@yahoo.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
    build-depends:    base >= 4.16.0.0,
    default-language: Haskell2010

executable counter
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    counter:lib-counter

library lib-counter
    import:           warnings
    exposed-modules:  Counter.Main
                      Counter.API
                      Counter.Server
                      Counter.Runner
                      Counter.Model
                      Servant.Server.ToHandler
                      Servant.Server.HandlerContext
                      Dep.Logger
                      Dep.Logger.HandlerAware
                      Dep.Repository
                      Dep.Repository.Memory
                      Dep.Has.Call
                      Dep.Conf
                      Dep.Knob
                      Dep.Knob.IORef
                      Dep.Knob.API
                      Dep.Knob.Server
                      Dep.Clock
                      Dep.Clock.Real
    hs-source-dirs:   lib
    build-depends:    
        aeson                              >= 2.0.3,
        containers                         >= 0.6.5,
        bytestring                         >= 0.11.3,
        mtl                                >= 2.2.2,
        transformers                       >= 0.5.6,
        text                               >= 1.2.5,
        dep-t                              >= 0.6.4 && < 0.7,
        dep-t-advice                       >= 0.6.2 && < 0.7,
        lens                               >= 5.2 && < 5.3,
        servant                            >= 0.19 && < 0.20,
        servant-server                     >= 0.19.1 && < 0.20,
        warp                               >= 3.3.21,
        uuid                               >= 1.3.15,
        yaml                               >= 0.11.8,
        time                               >= 1.11.1,
        async                              >= 2.2.4,
        unliftio-core                      >= 0.2.0 && < 0.3,
        by-other-names                     >= 1.2.2.0,
        multicurryable                     >= 0.1.0.0,
        sop-core                           >= 0.5.0.0
